Fix crashing issue on Safari due to javascript changing css problems

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,11 +26,6 @@
 }
 
 .noselect {
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none;   /* Chrome/Safari/Opera */
-  -khtml-user-select: none;    /* Konqueror */
-  -moz-user-select: none;      /* Firefox */
-  -ms-user-select: none;       /* Internet Explorer/Edge */
   user-select: none;           /* Non-prefixed version, currently
                                   not supported by any browser */
 }
@@ -138,6 +133,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 .background-shading{
   background: linear-gradient(to right, white 0%, white);
+  background: -webkit-linear-gradient(to right, white 0%, white);
   width:100%;
   height:100%;
   display: inline-block;
